src/test/ui/pub/pub-ident-fn-2.rs
pub foo(s: usize) { bar() }
//~^ ERROR missing `fn` for function definition

fn main() {
    foo(2);
}
